*** Added
- Introduced ALGOL 60 comments style. Disabled by default.
  For more see: [[https://github.com/sergeyklay/bnf-mode/pull/4][#4]] .

*** Changed
- Only setting =bnf-mode-algol-comments-style= to non-nil will allow use
  semicolons as a regular terminal symbols. For more see: [[https://github.com/sergeyklay/bnf-mode/pull/4][#4]] .

** [[https://github.com/sergeyklay/bnf-mode/compare/0.4.0...0.4.1][0.4.1]] - 2019-04-21
*** Fixes
- Minor fix related to build & deploy BNF Mode on Travis CI.

** [[https://github.com/sergeyklay/bnf-mode/compare/0.3.2...0.4.0][0.4.0]] - 2019-04-21
*** Added
- Added =comment-start-skip= to help comment commands recognize comments.
- Return back =comment-start= and =comment-end= removed in [[https://github.com/sergeyklay/bnf-mode/commit/83f0e0fc144e453bcce459d2d655a7b48e77953e][83f0e0f]] .
- More intelligent terminal syntax recognition.
  Added support of "=;=" character as an extra character used in terminals.
- Provided ability to build installation package.
  See =make help= for more.

** [[https://github.com/sergeyklay/bnf-mode/compare/0.3.1...0.3.2][0.3.2]] - 2019-03-24
*** Changed
- Published package on MELPA ([[https://github.com/melpa/melpa/pull/6074][melpa/melpa#6074]]).

*** Fixed
- In the BNF there are no strings thus treat ' and " as a regular symbols.
- Minor code cleanup: removed no longer needed =comment-*= variables.
- In the BNF there are no grouping brackets except angle ones. Fixed.

*** Removed
- Removed the =bnf-mode-version= function. Users can easily call
  =describe-package= or =pkg-info-package-version= interactively if they want
  to get this information ([[https://github.com/sergeyklay/bnf-mode/issues/1][#1]]).

** [[https://github.com/sergeyklay/bnf-mode/compare/0.3.0...0.3.1][0.3.1]] - 2019-03-17
*** Fixed
- Fixed BNF rule name definition to follow [[https://www.masswerk.at/algol60/report.htm][ALGOL 60 report]] .

** [[https://github.com/sergeyklay/bnf-mode/compare/0.2.0...0.3.0][0.3.0]] - 2019-03-17